--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 		<!-- Forms -->
 		<form action="process.php" method="POST">
 			<div>
-				<label> FIrst Name</label>
+				<label> First Name</label>
 		 		<input type="text" name="firstName" placeholder="enter first name">
 		 </div>
 		 <br>
@@ -95,19 +95,27 @@
 		 		<input type="text" name="lastName" placeholder="enter last name">
 		 </div>
 		 <br>
-		  <div>
+		 <label for=" Physical Address"> Physical Address</label>
+		 <input type="text/number" placeholder="enter your house address">
+		 <div>
+			 <br>
 				<label> Email</label>
-		 		<input type="email" name="email">
+				 <input type="email" name="email"placeholder="enter email address">
+
+				 <br>
+				 <br>
+
+				 <label> Phone number</label>
+		 		<input type="phone" name="Phone number" placeholder="enter phone number">
 		 </div>
 		 <br>
-		 <div>
-				<label> Summary</label>
-				<textarea name="Summary"></textarea>
+		 
 		 </div>
 		 <br>
 		  <div>
 				<label> Gender</label>
 				<select name="gender">
+					<option value="Click">Click</option>
 					<option value="male">male</option>
 					<option value="female">female</option>
 					<option value="other">other</option>
@@ -120,12 +128,31 @@
 		 </div>
 		 <br>
 		 <div>
-				<label> Birthday</label>
+				<label> Date of Birth</label>
 		 		<input type="date" name="Birthday">
 		 </div>
 		 <br>
-		 <input type="submit" name="submit" vaue="Submit">
+		 <div>
+			<label> Summary</label>
+			<textarea name="Summary" placeholder="tell us about youself"></textarea>
+			<br><br>
+			<br><br>
+
+		<div>
+			<label for="License and Agreement"> License and Agreement</label>
+			<br>
+			<input type="checkbox">Yes
+		</div>
+			<br>
+		<div>
+			<input type="checkbox" Disagree>No
+		</div>
+			
+			<br><br>
+		 <input type="submit" name="submit" value="Submit">
 		</form>
+		<br>
+		<br>
 
 		<!-- Button -->
 		<button>Go Here</button>
